force-app/main/default/objects/Product_Discount__c/Product_Discount__c.object-meta.xml
<CustomObject>
    <label>Product Discount</label>
    <nameField>
        <displayFormat>Disc-{00000000}</displayFormat>
        <label>Dicount Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>