force-app/main/default/objects/Product_Discount__c/fields/First_Range__c.field-meta.xml
<CustomField>
    <fullName>First_Range__c</fullName>
    <label>1st Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>