force-app/main/default/objects/Product_Discount__c/fields/First_Range_Value__c.field-meta.xml
<CustomField>
    <fullName>First_Range_Value__c</fullName>
    <label>1st Range Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>