force-app/main/default/objects/Product_Discount__c/fields/Fourth_Range__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Range__c</fullName>
    <label>4th Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>