force-app/main/default/objects/Product_Discount__c/fields/Fourth_Range_Value__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Range_Value__c</fullName>
    <label>4th Range Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>