force-app/main/default/objects/Product_Discount__c/fields/Second_Range__c.field-meta.xml
<CustomField>
    <fullName>Second_Range__c</fullName>
    <label>2nd Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>