force-app/main/default/objects/Product_Discount__c/fields/Sixth_Range_Value__c.field-meta.xml
<CustomField>
    <fullName>Sixth_Range_Value__c</fullName>
    <label>6th Range Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>