force-app/main/default/objects/Product_Discount__c/fields/Third_Range__c.field-meta.xml
<CustomField>
    <fullName>Third_Range__c</fullName>
    <label>3rd Range</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>