force-app/main/default/objects/Product_Discount__c/fields/Third_Range_Value__c.field-meta.xml
<CustomField>
    <fullName>Third_Range_Value__c</fullName>
    <label>3rd Range Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>