force-app/main/default/objects/Product_Discount__c/listViews/All_Product_Discounts.listView-meta.xml
<ListView>
    <fullName>All_Product_Discounts</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Price_Book__c</columns>
    <columns>First_Range__c</columns>
    <columns>First_Range_Value__c</columns>
    <columns>Second_Range__c</columns>
    <columns>Second_Range_Value__c</columns>
    <columns>Third_Range__c</columns>
    <columns>Third_Range_Value__c</columns>
    <columns>Fourth_Range__c</columns>
    <columns>Fourth_Range_Value__c</columns>
    <columns>Fifth_Range__c</columns>
    <columns>Fifth_Range_Value__c</columns>
    <columns>Sixth_Range_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Product Discounts</label>
</ListView>